# glue-geospatial

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  README.md  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
glue_geospatial/: __init__.py  coordinates.py  data_factory.py
glue_geospatial/tests/: test_basic.py  test_coordinates.py
glue_geospatial/tests/data/: generate.py  plain.tif  simplegeo.tif
