[metadata]
name = glue-geospatial
url = https://github.com/glue-viz/glue-geospatial
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
description = Experimental glue plugin for geospatial imagery
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    glue-core>=0.11
    rasterio
    pyproj

[options.entry_points]
glue.plugins =
    glue_geospatial = glue_geospatial:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-faulthandler
    mock

[options.package_data]
glue_geospatial.tests = data/*
